--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <body>
     <h1>Фоторум </h1>
-    <p>Привет, меня зовут Тима | tg: delusion665</p>
+    <p>Привет, меня зовут Тима | tgk: <a href="https://t.me/tkm_v1" target="_blank">tkm | aesthetic</a></p>
     <p>Основное устройство:<strong> Huawei P60 Pro</strong>, обработка: <strong>Lightroom</strong> </p>
     <img src="images/firefox-icon.png" alt="Photo of road among trees with orange sunlight" />
     <script src="scripts/main.js"></script>
