--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <body>
     <h1>Фоторум </h1>
-    <p>Привет, меня зовут Тима | tg: delusion665 <img src="https://sun4-19.userapi.com/impg/h7i7nFYYzK6d2IZTcigWp6hLPd9ZdbnYt0b6xQ/lOWcVGGDI1M.jpg?size=960x1280&quality=96&sign=a770ca07f185a463396e85c85a3a92bc&type=album" alt="Photo of road among trees with orange sunlight" /> </p>
+    <p>Привет, меня зовут Тима | tg: @delusion665 | tgk: <a href="https://t.me/tkm_v1"> tkm | aesthetic </a> <img src="https://sun4-19.userapi.com/impg/h7i7nFYYzK6d2IZTcigWp6hLPd9ZdbnYt0b6xQ/lOWcVGGDI1M.jpg?size=960x1280&quality=96&sign=a770ca07f185a463396e85c85a3a92bc&type=album" alt="Photo of road among trees with orange sunlight" /> </p>
     <p>Основное устройство:<strong> ### </strong>, обработка: <strong>Lightroom</strong> </p>
     <script src="scripts/main.js"></script>
   </body>
