--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
 
   <body>
     <h1>Фоторум </h1>
-    <p>Привет, меня зовут Тима | tg: @delusion665 | tgk: <a href="https://t.me/tkm_v1"> tkm | aesthetic </a> <img src="https://sun4-19.userapi.com/impg/h7i7nFYYzK6d2IZTcigWp6hLPd9ZdbnYt0b6xQ/lOWcVGGDI1M.jpg?size=960x1280&quality=96&sign=a770ca07f185a463396e85c85a3a92bc&type=album" alt="Photo of road among trees with orange sunlight" /> </p>
-    <p>Основное устройство:<strong> ### </strong>, обработка: <strong>Lightroom</strong> </p>
+
+    <p>Привет, меня зовут Тима | tg: @delusion665 | <a href="https://t.me/tkm_v1"> Фоторум в телеграм! </a> </p>
+
+    <img src="https://sun4-21.userapi.com/impg/bPKgJj2Ukpk-aft10g35GlYJ94vNykwPNjVASg/XooD2Tn9RJ4.jpg?size=875x1280&quality=96&sign=0cfec05f1ea7857658fd3d66c4d3d486&type=album"
+      alt="Photo of road among trees with orange sunlight" />
+
+    <p>На что фотографировал:<strong> Huawei P60 Pro | Poco F3 | Iphone 13 | Nikon S500 </strong>, обработка: <strong>Lightroom</strong> </p>
     <script src="scripts/main.js"></script>
   </body>
 </html>
